--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <h2>Game Populer</h2>
             <div class="grid-container">
                 <div class="game-card" data-game-id="mobile-legends">
-                    <img src="https://via.placeholder.com/150/0000FF/FFFFFF?text=MLBB" alt="Mobile Legends">
+                    <img src="MLBB-2025-tiles-178x178.jpg" alt="Mobile Legends">
                     <h3>Mobile Legends: Bang Bang</h3>
                     <p>Top-up Diamond MLBB termurah dan tercepat.</p>
                     <a href="game-detail.html?game=mobile-legends" class="btn">Beli Sekarang</a>
