--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Top-Up Game - Contoh Codashop</title>
+    <title>Top-Up Game - </title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -34,7 +34,7 @@
                     <a href="game-detail.html?game=mobile-legends" class="btn">Beli Sekarang</a>
                 </div>
                 <div class="game-card" data-game-id="free-fire">
-                    <img src="https://via.placeholder.com/150/FF0000/FFFFFF?text=FF" alt="Free Fire">
+                    <img src="free-fire-tile-codacash-new.jpg" alt="Free Fire">
                     <h3>Garena Free Fire</h3>
                     <p>Top-up Diamond FF dengan berbagai metode pembayaran.</p>
                     <a href="game-detail.html?game=free-fire" class="btn">Beli Sekarang</a>
