--- a/game-detail.html
+++ b/game-detail.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Free Fire Top-up | Codashop Clone</title>
+    <title>Free Fire Top-up | topupindo</title>
     <style>
         /* General Styles */
         body {
